17780
```scala
scala> val q"foo(..$args1)" = q"foo($args)"
error: exception during macro expansion: 
java.lang.Exception: Incorrect cardinality, expected '..', but got ''
	at scala.tools.reflect.quasiquotes.ApplyReifier$SubsToTree$$anonfun$unapply$2.apply(ApplyReifier.scala:44)
	at scala.tools.reflect.quasiquotes.ApplyReifier$SubsToTree$$anonfun$unapply$2.apply(ApplyReifier.scala:37)
	at scala.Option.flatMap(Option.scala:170)
	at scala.tools.reflect.quasiquotes.ApplyReifier$SubsToTree$.unapply(ApplyReifier.scala:37)
	at scala.tools.reflect.quasiquotes.ApplyReifier$$anonfun$reifyList$1.apply(ApplyReifier.scala:95)
	at scala.tools.reflect.quasiquotes.ApplyReifier$$anonfun$reifyList$1.apply(ApplyReifier.scala:94)
	at scala.collection.TraversableLike$$anonfun$map$1.apply(TraversableLike.scala:244)
	at scala.collection.TraversableLike$$anonfun$map$1.apply(TraversableLike.scala:244)
	at scala.collection.immutable.List.foreach(List.scala:309)
	at scala.collection.TraversableLike$class.map(TraversableLike.scala:244)
	at scala.collection.AbstractTraversable.map(Traversable.scala:105)
	at scala.tools.reflect.quasiquotes.ApplyReifier.reifyList(ApplyReifier.scala:94)
	at scala.reflect.reify.phases.Reify$$anonfun$reify$1.apply(Reify.scala:52)
	at scala.reflect.reify.phases.Reify$$anonfun$reify$1.apply(Reify.scala:39)
	at scala.reflect.reify.phases.Reify$reifyStack$.push(Reify.scala:27)
	at scala.reflect.reify.phases.Reify$class.reify(Reify.scala:39)
	at scala.reflect.reify.Reifier.reify(Reifier.scala:14)
	at scala.reflect.reify.codegen.GenUtils$$anonfun$reifyProduct$2.apply(GenUtils.scala:19)
	at scala.reflect.reify.codegen.GenUtils$$anonfun$reifyProduct$2.apply(GenUtils.scala:19)
	at scala.collection.TraversableLike$$anonfun$map$1.apply(TraversableLike.scala:244)
	at scala.collection.TraversableLike$$anonfun$map$1.apply(TraversableLike.scala:244)
	at scala.collection.immutable.List.foreach(List.scala:309)
	at scala.collection.TraversableLike$class.map(TraversableLike.scala:244)
	at scala.collection.AbstractTraversable.map(Traversable.scala:105)
	at scala.reflect.reify.codegen.GenUtils$class.reifyProduct(GenUtils.scala:19)
	at scala.reflect.reify.Reifier.reifyProduct(Reifier.scala:14)
	at scala.reflect.reify.codegen.GenUtils$class.reifyProduct(GenUtils.scala:14)
	at scala.reflect.reify.Reifier.reifyProduct(Reifier.scala:14)
	at scala.reflect.reify.codegen.GenTrees$class.reifyBasicTree(GenTrees.scala:83)
	at scala.tools.reflect.quasiquotes.ApplyReifier.reifyBasicTree(ApplyReifier.scala:79)
	at scala.tools.reflect.quasiquotes.ApplyReifier.reifyTree(ApplyReifier.scala:74)
	at scala.reflect.reify.phases.Reify$$anonfun$reify$1.apply(Reify.scala:46)
	at scala.reflect.reify.phases.Reify$$anonfun$reify$1.apply(Reify.scala:39)
	at scala.reflect.reify.phases.Reify$reifyStack$.push(Reify.scala:27)
	at scala.reflect.reify.phases.Reify$class.reify(Reify.scala:39)
	at scala.reflect.reify.Reifier.reify(Reifier.scala:14)
	at scala.tools.reflect.quasiquotes.ApplyQMacro.reifyTree(ApplyQMacro.scala:90)
	at scala.tools.reflect.quasiquotes.ApplyQMacro.<init>(ApplyQMacro.scala:56)
	at scala.tools.reflect.FastTrack$$anonfun$fastTrack$7$$anon$5.<init>(FastTrack.scala:39)
	at scala.tools.reflect.FastTrack$$anonfun$fastTrack$7.applyOrElse(FastTrack.scala:39)
	at scala.tools.reflect.FastTrack$$anonfun$fastTrack$7.applyOrElse(FastTrack.scala:39)
	at scala.runtime.AbstractPartialFunction.apply(AbstractPartialFunction.scala:33)
	at scala.tools.reflect.FastTrack$FastTrackEntry.run(FastTrack.scala:25)

<console>:31: error: recursive value args1 needs type
       val q"foo(..$args1)" = q"foo($args)"
           ^
```
